# pet-focus

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  WEBSOCKET_API.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  save.tres  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  tray.rs
src-tauri/src/core/: app.rs  feature.rs  mod.rs
src-tauri/src/core/registry/: commands.rs  mod.rs  tray.rs
src-tauri/src/entities/: mod.rs  todo.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/achievement/: feature.rs  mod.rs
src-tauri/src/features/pet/: commands.rs  feature.rs  manager.rs  mod.rs
src-tauri/src/features/pomodoro/: feature.rs  mod.rs
src-tauri/src/features/settings/: feature.rs  mod.rs
src-tauri/src/features/tag/: feature.rs  mod.rs
src-tauri/src/features/todo/: feature.rs  mod.rs
src-tauri/src/features/window/: feature.rs  manager.rs  mod.rs
src-tauri/src/infrastructure/database/: connection.rs  registry.rs
src-tauri/src/infrastructure/notification/: manager.rs  mod.rs
src-tauri/src/infrastructure/tray/: items.rs  manager.rs  mod.rs  registry.rs
src-tauri/src/infrastructure/webserver/: mod.rs
src-tauri/src/lib/: commands.rs  db.rs  entities.rs  models.rs  services.rs  tray.rs  webserver.rs  window.rs
src-tauri/src/lib/entities/: setting.rs  todo.rs
src-tauri/src/lib/models/: todo.rs  (+1 more)
src-tauri/src/models/: todo.rs
src-tauri/src/services/: todo_service.rs
(+221 files in other folders)
