[package]
name = "pet-focus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pet_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-native-tls", "sqlx-sqlite"] }
directories = "5"
tauri-plugin-notification = "2"

# 仅桌面平台启用系统托盘和 Web 服务器功能
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
futures = "0.3"

